ValGrind. Run 'valgrind --tool=memcheck --leak-check=yes ./test'

To do:
- ALWAYS check the return value of ALL file read/write functions. Failing to do
  so 1. can be dangerous and 2. causes the RPM build to spit out warnings.

Log:

- 06/08/2006, version 0.2.3: roms
	- target hand-held is passed by tifiles_content_create_xxxx

- 12/07/2006, version 0.2.2: roms
	- variables like 'beta' can't be handled by TiGroup file nor ZIP archives.
	Translate filenames again!
	- for now, use this naming scheme for TI9x var filenames: folder.var.extension
	- look for the correct module file name on MinGW in tifiles_library_init (kevin)
	- fixed _FORTIFY_SOURCE and strict-aliasing (and a few harmless) warnings (kevin)

- 06/07/2006, version 0.2.1: roms
	- bug #1499672: every edit-locked BASIC and AMS program is marked ASM
	and received as *.8xz, of course this has to be *.8xp for both locked 
	BASIC and ASM.
	- reverted back changes made on tifile encoding <-> raw varname encoding (v0.1.2)
		because	this code had no effect. Moreover, it will imply to pass target hand-held
		to convert varname in the right encoding. For now, this step is postponed on ticalcs2
		library.
	- reverted back again
	- replaced fopen by gfopen in ZIP I/O callbacks (locale/utf8)

- 17/06/2006, version 0.2.0: roms
	- full TiGroup support (both regular & flash with deflate compression)

- 05/06/2006, version 0.1.5: roms
	- renamed stdints.h into stdints2.h
	
- 16/05/2006, version 0.1.4: roms
	- fixed bug in tifiles_file_is_tib which didn't detect TIB files.

- 16/04/2006, version 0.1.3: roms
	- thanks to O. Armand, fixed a bug in the file attribute (archived flag)
	- ti8x_read_flash now returns in FlashContent.data_length the length of pure data
		instead of file size (TI8x FLASH file format)

- 07/04/2006, version 0.1.2: roms
	- increased buffer length of variable & folder names (9 -> 36) due to TI-UTF-8
	- checked for usb calcs support
	- fixed warnings

- 16/03/2006, version 0.1.1: roms